--- a/bottom_nav_movie/pubspec.yaml
+++ b/bottom_nav_movie/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.6.6
+  carousel_slider: ^4.2.0 
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -77,6 +78,8 @@ flutter:
      - assets/icon/movie10.webp
      - assets/icon/akuucihuy.jpg
      - assets/icon/encredibleme4.jpg
+     - assets/icon/movie12.jpg
+     - assets/icon/movie13.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
